@@ -1,3 +1,10 @@
+2008-08-18 Hans Boehm <Hans.Boehm@hp.com> (really Thiemo Seufer)
+	* src/atomic_ops/sysdeps/gcc/powerpc.h: Add %U1 (update) to lwz
+	instruction.
+
+2008-08-18 Hans Boehm <Hans.Boehm@hp.com> (really Sebastian Siewior)
+	* src/atomic_ops/sysdeps/gcc/powerpc.h: Consider __NO_LWSYNC__.
+
 2008-07-24 Hans Boehm <Hans.Boehm@hp.com> (really Ivan Maidanski)
 	* src/atomic_ops/sysdeps/ao_t_is_int.h, src/atomic_ops.h:
 	Add parentheses around addr arg for various functions.
